<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Camera Example</string>
	<string name="auto_focus">Auto Focus</string>
	<string name="unknown">Unknown</string>
	<string name="antibanding">Antibanding</string>
	<string name="effect">Effect</string>
	<string name="flash_mode">Flash Mode</string>
	<string name="focus_mode">Focus Mode</string>
	<string name="scene_mode">Scene Mode</string>
	<string name="white_balance">White Balance</string>
</resources>
